src/test/scala/wacc/wacc_examples/invalid/syntaxErr/variables/varNamedThis.wacc
# variable declaration with name "this"

# Output:
# #syntax_error#

# Exit:
# 100


# Program:

begin
    int this = 0
end